Navbar menu spacing issue solve

--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -71,7 +71,7 @@ html {
         label {
             font-size: 20px;
             font-weight: normal;
-            font-family: 'circular-normal';
+            // font-family: 'circular-normal';
         }
     }
 }
